# nerminal

./: .gitignore  LICENSE  README.md  help.txt  main.py  nerminal.py  pyproject.toml  requirements.txt
